[refactor TableHeader] fix align item css

--- a/src/components/TableHeader/TableHeader.css
+++ b/src/components/TableHeader/TableHeader.css
@@ -17,9 +17,11 @@
 .tableHeaderLeft {
   display: flex;
   width: 50%;
+  align-items: center;
 }
 
 .tableHeaderRight {
   display: flex;
   width: 50%;
+  align-items: center;
 }
